--- a/src/layouts/header/style.css
+++ b/src/layouts/header/style.css
@@ -21,6 +21,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .nav {
+    padding: 1rem 1rem;
+  }
+
   .nav__wrapper {
     display: flex;
   }
